--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "embla-carousel-react": "^8.0.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "nextjs-toploader": "^1.6.12",
+    "photoswipe": "^5.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
